# smart-home

sh-backend/: .gitignore  Cargo.toml  README.md  sample.env
sh-backend/.sqlx/: query-612ecfba19a77d01d43d392160f343d92c9f9c9cb1fc3907fcc17c5262b01109.json  query-9c74749aab5e2671ea044046cf645d0406611020d2da2f85cfbef0125634e7f1.json  query-c279546cff35236b2995e611a803f7030c4c9452f302f50648595a413e2c7ced.json  query-ccf09c06daa223f0d4cbb8ecf3d4b2a703710f1f7d6cab83fe549421b0419894.json  query-dee26608381a56fb04d43cb9e55e4c08664a98e54f3ae5e31614fd2250559de0.json  query-ef87b491dc9845cc6f6bdae52dcb70810506e0d918f18b2b285e763d78e85457.json
sh-backend/migrations/: 20250531214811_initial_schema.sql
sh-backend/src/: main.rs  models.rs  schema.rs  seed.rs
sh-frontend/: .cta.json  .gitignore  biome.json  codegen.ts  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.js
sh-frontend/public/: manifest.json
sh-frontend/src/: main.tsx
sh-frontend/src/components/: DeviceSelector.tsx  Header.tsx  RoomSelector.tsx  SensorReadingTable.tsx  SiteSelector.tsx
sh-frontend/src/routes/: __root.tsx  index.tsx
