[package]
name = "sh-backend"
version = "0.1.0"
edition = "2024"
default-run = "sh-backend"

[dependencies]
async-graphql = { version = "7.0.17", features = ["chrono"] }
async-graphql-rocket = "7.0.17"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0.98"
rand = "0.9.1"

[[bin]]
name = "seed_db" # The name of your executable
path = "src/bin/seed_db.rs" # The path to its main file
